# smart-summarizer

./: .dockerignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: sync-to-hf.yml
